Fix the weird text issue Paul was having on Firefox form inputs.

--- a/tcamp/static/styles/app.scss
+++ b/tcamp/static/styles/app.scss
@@ -2017,6 +2017,8 @@ table.wall-table {
     select,
     textarea {
       width: 100%;
+      height: 100%;
+      padding: 10px;
     }
 
     .email-row input {
@@ -2035,12 +2037,6 @@ table.wall-table {
         width: 90px;
         display: inline-block;
         margin: 0 10px;
-      }
-    }
-
-    form {
-      select {
-        height: 37px;
       }
     }
   }
